<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editText1"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <requestFocus />
        </EditText>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/idConnectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connectButton" />

            <Button
                android:id="@+id/idInGroupButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inGroupButton" />

            <Button
                android:id="@+id/idInRangeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inRangeButton" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Wifi"
                android:id="@+id/WifiOn" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

        </LinearLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textMultiLine" />

</LinearLayout>