<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ist174008.prof.cmov.cmov.LoginActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editTextEmail"
        android:hint="@string/exampleUser"
        android:layout_above="@+id/textViewPassword"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPassword"
        android:layout_below="@+id/textViewPassword"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/passwordLogin"
        android:id="@+id/textViewPassword"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/editTextPassword"
        android:layout_alignStart="@+id/editTextPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/username"
        android:id="@+id/textViewEmail"
        android:layout_alignBottom="@+id/editTextEmail"
        android:layout_alignLeft="@+id/editTextEmail"
        android:layout_alignStart="@+id/editTextEmail"
        android:layout_marginBottom="44dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LOGIN"
        android:id="@+id/btnLOGIN"
        android:layout_marginTop="49dp"
        android:layout_below="@+id/editTextPassword"
        android:layout_alignLeft="@+id/editTextPassword"
        android:layout_alignStart="@+id/editTextPassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:id="@+id/buttonRegister"
        android:layout_toRightOf="@+id/textViewPassword"
        android:layout_alignRight="@+id/editTextPassword"
        android:layout_alignEnd="@+id/editTextPassword"
        android:layout_alignBottom="@+id/btnLOGIN"
        android:layout_alignTop="@+id/btnLOGIN" />

</RelativeLayout>
